--- a/MemleketProjesi/css/mySheet.css
+++ b/MemleketProjesi/css/mySheet.css
@@ -11,8 +11,8 @@
     text-align: center;
     font-size: 30px;
     color: rgb(50, 203, 152);
-    background-color: rgba(117, 74, 205, 0.852);
-    padding: 5%;
+    background-color: rgba(117, 74, 205, 0.851);
+    padding: 2%;
     margin-right:35%;
     float: right;
 
@@ -31,14 +31,15 @@
     margin: 10% 30%;
     text-align: center;
     background-color: cornflowerblue;
-    color: blueviolet;
+    color: rgb(138, 43, 226);
 }
 
 .divNav
 {
     width: 200px;
-    min-height: 100%;
-    height: 1000px;
+    height: 100%;
+    position: absolute;
+    left: 0%;
     background-color: rgb(93, 197, 225);
     float: left;
     text-align: center;
