--- a/MemleketProjesi/css/mySheet.css
+++ b/MemleketProjesi/css/mySheet.css
@@ -13,9 +13,6 @@
     color: rgb(50, 203, 152);
     background-color: rgba(117, 74, 205, 0.851);
     padding: 2%;
-    margin-right:35%;
-    float: right;
-
     /* border in div */
     border-style: solid;
      border-radius: 200px;
@@ -36,12 +33,109 @@
 
 .divNav
 {
-    width: 200px;
     height: 100%;
-    position: absolute;
-    left: 0%;
     background-color: rgb(93, 197, 225);
-    float: left;
     text-align: center;
+    position: absolute;
 }
 
+li a.navList
+{
+    text-decoration-line: none;
+    font-size: 21px;
+    padding-left: 5%;
+    color: rgba(117, 74, 205, 0.851);
+    font-weight: bold;
+}
+
+.navLeft
+{
+    text-decoration: none;
+     margin-left: 5%;
+      font-weight: 800;
+       color: aliceblue;
+}
+
+.headerStyle
+{
+    font-size: x-large;
+     text-align: center;
+     background-color: rgb(70, 64, 70);
+}
+
+.headerDiv
+{
+    border-radius: 200px;
+     border: 10px solid  rgb(45, 5, 86);
+      background-color: rgb(138, 43, 226);
+       margin: 0 35%;
+        width: 30%;
+         padding: 3% 0;
+          font-size: xx-large;
+}
+
+.navFirstDiv
+{
+    display: inline;
+     text-align: start;
+      font-size: 21px;
+}
+
+.navSecondDiv
+{
+    display: inline;
+      font-size: 21px;
+       margin-left: 40%;
+}
+
+.section1
+{
+    padding: 50px 300px;
+     margin-left: 3%;
+      margin-right: 3%;
+       margin-top: 2%;
+        font-weight: 900;
+         font-size: 28px;
+          text-align: center;
+}
+
+.images1
+{
+    display: none;
+     width: auto;
+      height: 400px;
+}
+
+.article2
+{
+    margin: 0% 5%;
+     font-size: 20px;
+       width: 70%;
+}
+
+.aside1
+{
+    background-color: rgb(132, 113, 113);
+     float: right;
+      width: 20%;
+       font-size: 20px;
+        text-align: center;
+         padding-top: 1%;
+         margin-right: 1%;
+         color: rgb(224, 233, 94);
+}
+
+.animeHeader
+{
+     margin-right: 40%;
+      font-weight: 600;
+       text-decoration: underline;
+}
+
+.animeImagesLi
+{
+    display: inline-block;
+     background-color: rgb(214, 61, 204);
+      margin-right: 40px;
+       margin-bottom: 20px;
+}
