--- a/MemleketProjesi/css/mySheet.css
+++ b/MemleketProjesi/css/mySheet.css
@@ -20,16 +20,6 @@
       /* border: 5px solid rgb(50, 203, 152); */
 
 }
-.divSi
-{
-    width: 40%;
-    padding-top: 15%;
-    padding-bottom: 15%;
-    margin: 10% 30%;
-    text-align: center;
-    background-color: cornflowerblue;
-    color: rgb(138, 43, 226);
-}
 
 .divNav
 {
@@ -60,13 +50,13 @@ li a.navList
 {
     font-size: x-large;
      text-align: center;
-     background-color: rgb(70, 64, 70);
+     background-color: rgb(131, 31, 173);
 }
 
 .headerDiv
 {
     border-radius: 200px;
-     border: 10px solid  rgb(45, 5, 86);
+     border: 15px solid  rgb(45, 5, 86);
       background-color: rgb(138, 43, 226);
        margin: 0 35%;
         width: 30%;
@@ -90,7 +80,7 @@ li a.navList
 
 .section1
 {
-    padding: 50px 300px;
+    padding: 50px 24%;
      margin-left: 3%;
       margin-right: 3%;
        margin-top: 2%;
@@ -125,17 +115,58 @@ li a.navList
          color: rgb(224, 233, 94);
 }
 
-.animeHeader
-{
-     margin-right: 40%;
-      font-weight: 600;
-       text-decoration: underline;
-}
-
 .animeImagesLi
 {
     display: inline-block;
      background-color: rgb(214, 61, 204);
       margin-right: 40px;
        margin-bottom: 20px;
+}
+
+.form-logIn
+{
+    max-width: 400px;
+}
+
+.headerStyleCv
+{
+    font-size: x-large;
+     text-align: center;
+     background-color: rgb(24, 46, 148);
+}
+
+.headerDivCv
+{
+    border-radius: 200px;
+     border: 15px solid  rgb(7, 7, 59);
+      background-color: rgb(49, 139, 230);
+       margin: 0 35%;
+        width: 30%;
+         padding: 3% 0;
+          font-size: xx-large;
+}
+
+.headerStyleMyCity
+{
+    font-size: x-large;
+     text-align: center;
+     background-color: rgb(29, 140, 96);
+}
+
+.headerDivMyCity
+{
+    border-radius: 200px;
+     border: 15px solid  rgb(5, 69, 16);
+      background-color: rgb(44, 228, 87);
+       margin: 0 35%;
+        width: 30%;
+         padding: 3% 0;
+          font-size: xx-large;
+}
+
+.articleCv
+{
+    font-size: 18;
+     margin-left: 10%;
+      margin-right: 10%;
 }
